[package]
name = "batch_rename"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "color"] }

[profile.release]
lto = true
opt-level = "z" # Optimize for size.
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
